--- a/src/app/shared-ui/pagination/pagination.component.scss
+++ b/src/app/shared-ui/pagination/pagination.component.scss
@@ -59,8 +59,9 @@
   }
 
   /* (Progressive enhancement)
-      hide .table-pagination if it has only a single child (page 1).
-    */
+    hide .table-pagination if it has only a single child (page 1).
+  */
+
   &:has(.pagination__item:only-child) {
     display: none;
   }
@@ -69,9 +70,9 @@
     --_button-font-size: 2rem;
 
     cursor: pointer;
-    border: 1px solid var(--bg-primary-variant);
+    border: 0.1rem solid var(--bg-primary-variant);
     border-radius: 0.4rem;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.5);
     background-color: var(--bg-primary);
     color: var(--text-primary);
     transition: background-color calc(0.3 * var(--base-duration));
@@ -92,8 +93,8 @@
     }
 
     &:active:not([hidden]) {
-      transform: translateY(1px);
-      box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.5);
+      transform: translateY(0.1rem);
+      box-shadow: inset 0 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.5);
     }
 
     &[hidden] {
